lab1/Test/L1-A-0-11.cmm
float DJwk8QuW [ 443286196 ] [ 1438507752 ] [ 572561811 
  ] , sRJCj_gsYE [ 1804817184 ] \

;
int O0rmKQtHEkoN $( ) {
  if ( 1993077304 - TRsgL1Fzko + Wi6Z - KsfNSWTT04 
    + WMzZuUm %+ XhgBRidflQ5GZnAWYx_ >= c5VxA || gt68L7e 
    )   Ce56B1YoLeOz ;\

}
`